fixed border radius not showing issue

--- a/index.css
+++ b/index.css
@@ -88,12 +88,24 @@ svg {
   overflow: hidden;
 }
 
+@media (orientation: portrait) {
+  #live-feed,
+  #image-preview {
+    width: -webkit-fill-available;
+    height: auto;
+  }
+}
+
+@media (orientation: landscape) {
+  #live-feed,
+  #image-preview {
+    height: -webkit-fill-available;
+    width: auto;
+  }
+}
+
 #live-feed,
 #image-preview {
-  width: -webkit-fill-available;
-  height: -webkit-fill-available;
-  /* width: 100%;
-  height: 100%; */
   border-radius: 2rem;
   object-fit: contain;
 }
